- Add export CEL to PNG.
- Ask for color fit when loading a CEL file.
- Add gradients.
- Hide menu when not needed.
- Autosave state in every 1 min.
- Configurable autosave interval.


2023.03.28
- Moving mouse over the palette in the PaletteEditor show color hint.
- When you are in the PaletteEditor, color hint only visible over the DrawArea or
  over the palette colors.

2023.03.24
- Added a new, modern font for the modern look. (Drawn entirely with this program!)
- InfoBar now appears above the current panel (Controls or PaletteEditor),
  and on the top of the window when no panel is visible.
- GetCEL and PutCEL now shows coordinates in first state too.
- Added degree symbol to the rotate dialog.
- Submenus can have hints.

2023.03.23
- Code cleanup in MainUnit.
- When you release CEL, all menus requiring active CEL are disabled.
- When you get or load a CEL, all menus requiring active CEL are enabled.
- Under the hood: MouseObjects only calls draw for visible objects.
- CEL/Put works.
- CEL/Save works. It saves the CEL in .bdc format. (See fileformats.txt)

2023.03.22
- Modal dialogs are reworked, less code to create a new one.
- Fix in rotate, 180 and 270 crashed.
- Modal dialog units are merged into one file.

2023.03.21
- Some tools didn't clear the Infobar after them. Fixed.
- Rotate CEL dialog appears when selecting CEL/Rotate. You can select the amount
  to rotate by the buttons, or pressing keys 1..3. Clicking "OK" or pressing Enter
  will rotate the CEL, "Cancel" will close the dialog without doing anything.

2023.03.20
- Undo/Redo buttons now uses OnClick event instead of the MessageQueue.
- SubMenuItems now can be disabled. (Appears in grey and remains grey when the
  mouse points it.)
- File/Quit works, but it quits instantly without asking anything.
- Added CELSHOW tool. It shows CEL for a short interval (1s). Useful after
  loading or modifying cel.
- The loaded CEL is always moved to 0,0. After loading CEL the CEL is visible
  for a short time.