@@ -21,8 +21,8 @@ GetColor=58
 
 [DrawArea]
 Zoom=3
-ZoomLeft=12
-ZoomTop=-1
+ZoomLeft=4
+ZoomTop=2
 
 [BasicControls]
 Tool0=DRAW
