@@ -16,8 +16,8 @@
         <Filename Value="BDPMainUnit.pas"/>
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="1"/>
-        <TopLine Value="257"/>
-        <CursorPos Y="299"/>
+        <TopLine Value="131"/>
+        <CursorPos X="3" Y="147"/>
         <UsageCount Value="200"/>
         <Loaded Value="True"/>
       </Unit>
@@ -76,9 +76,10 @@
       <Unit>
         <Filename Value="BDPDrawAreaUnit.pas"/>
         <IsPartOfProject Value="True"/>
+        <IsVisibleTab Value="True"/>
         <EditorIndex Value="9"/>
-        <TopLine Value="194"/>
-        <CursorPos X="78" Y="216"/>
+        <TopLine Value="104"/>
+        <CursorPos X="9" Y="126"/>
         <UsageCount Value="200"/>
         <Loaded Value="True"/>
       </Unit>
@@ -112,9 +113,9 @@
         <Filename Value="BDPToolsUnit.pas"/>
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="8"/>
-        <TopLine Value="1230"/>
-        <CursorPos X="23" Y="1299"/>
-        <UsageCount Value="199"/>
+        <TopLine Value="1266"/>
+        <CursorPos Y="1284"/>
+        <UsageCount Value="200"/>
         <Loaded Value="True"/>
       </Unit>
       <Unit>
@@ -123,7 +124,7 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="94"/>
         <CursorPos Y="116"/>
-        <UsageCount Value="198"/>
+        <UsageCount Value="199"/>
       </Unit>
       <Unit>
         <Filename Value="BDPModalDialogsUnit.pas"/>
@@ -131,7 +132,7 @@
         <EditorIndex Value="11"/>
         <TopLine Value="285"/>
         <CursorPos X="26" Y="307"/>
-        <UsageCount Value="186"/>
+        <UsageCount Value="187"/>
         <Loaded Value="True"/>
       </Unit>
       <Unit>
@@ -140,7 +141,7 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="3"/>
         <CursorPos Y="37"/>
-        <UsageCount Value="179"/>
+        <UsageCount Value="180"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit>
       <Unit>
@@ -149,7 +150,7 @@
         <EditorIndex Value="4"/>
         <TopLine Value="56"/>
         <CursorPos X="20" Y="64"/>
-        <UsageCount Value="162"/>
+        <UsageCount Value="163"/>
         <Loaded Value="True"/>
       </Unit>
       <Unit>
@@ -158,7 +159,7 @@
         <EditorIndex Value="5"/>
         <TopLine Value="22"/>
         <CursorPos X="22" Y="62"/>
-        <UsageCount Value="150"/>
+        <UsageCount Value="151"/>
         <Loaded Value="True"/>
       </Unit>
       <Unit>
@@ -167,16 +168,15 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="7"/>
         <CursorPos X="23" Y="65"/>
-        <UsageCount Value="140"/>
+        <UsageCount Value="141"/>
       </Unit>
       <Unit>
         <Filename Value="BDPPaletteEditorUnit.pas"/>
         <IsPartOfProject Value="True"/>
-        <IsVisibleTab Value="True"/>
         <EditorIndex Value="2"/>
-        <TopLine Value="146"/>
-        <CursorPos X="76" Y="171"/>
-        <UsageCount Value="113"/>
+        <TopLine Value="170"/>
+        <CursorPos X="5" Y="169"/>
+        <UsageCount Value="114"/>
         <Loaded Value="True"/>
       </Unit>
       <Unit>
@@ -185,7 +185,7 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="38"/>
         <CursorPos X="53" Y="63"/>
-        <UsageCount Value="105"/>
+        <UsageCount Value="106"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit>
       <Unit>
@@ -194,7 +194,7 @@
         <EditorIndex Value="3"/>
         <TopLine Value="137"/>
         <CursorPos X="22" Y="140"/>
-        <UsageCount Value="78"/>
+        <UsageCount Value="79"/>
         <Loaded Value="True"/>
       </Unit>
       <Unit>
@@ -489,30 +489,6 @@
     </Units>
     <JumpHistory HistoryIndex="29">
       <Position>
-        <Filename Value="BDPInfoBarUnit.pas"/>
-        <Caret Line="43" Column="22" TopLine="25"/>
-      </Position>
-      <Position>
-        <Filename Value="BDPInfoBarUnit.pas"/>
-        <Caret Line="89" TopLine="50"/>
-      </Position>
-      <Position>
-        <Filename Value="BDPModalDialogsUnit.pas"/>
-        <Caret Line="51" Column="14" TopLine="25"/>
-      </Position>
-      <Position>
-        <Filename Value="BDPMenuUnit.pas"/>
-        <Caret Line="172" TopLine="129"/>
-      </Position>
-      <Position>
-        <Filename Value="BDPMenuUnit.pas"/>
-        <Caret Line="70" Column="15" TopLine="45"/>
-      </Position>
-      <Position>
-        <Filename Value="BDPMenuUnit.pas"/>
-        <Caret Line="141" Column="32" TopLine="123"/>
-      </Position>
-      <Position>
         <Filename Value="BDPMenuUnit.pas"/>
         <Caret Line="29" Column="21"/>
       </Position>
@@ -607,6 +583,30 @@
       <Position>
         <Filename Value="BDPDrawAreaUnit.pas"/>
         <Caret Line="48" Column="68" TopLine="22"/>
+      </Position>
+      <Position>
+        <Filename Value="BDPDrawAreaUnit.pas"/>
+        <Caret Line="127" Column="19" TopLine="113"/>
+      </Position>
+      <Position>
+        <Filename Value="BDPDrawAreaUnit.pas"/>
+        <Caret Line="124" Column="3" TopLine="116"/>
+      </Position>
+      <Position>
+        <Filename Value="BDPDrawAreaUnit.pas"/>
+        <Caret Line="128" TopLine="122"/>
+      </Position>
+      <Position>
+        <Filename Value="BDPDrawAreaUnit.pas"/>
+        <Caret Line="164" TopLine="143"/>
+      </Position>
+      <Position>
+        <Filename Value="BDPDrawAreaUnit.pas"/>
+        <Caret Line="165" Column="29" TopLine="129"/>
+      </Position>
+      <Position>
+        <Filename Value="BDPDrawAreaUnit.pas"/>
+        <Caret Line="124" TopLine="102"/>
       </Position>
     </JumpHistory>
     <RunParams>
