@@ -15,6 +15,7 @@ Todo:
 - Moving mouse over the palette in the PaletteEditor show color hint.
 - When you are in the PaletteEditor, color hint only visible over the DrawArea or
   over the palette colors.
+- Releasing RMB after panning no longer exits PaletteEditor.
 
 2023.03.24
 - Added a new, modern font for the modern look. (Drawn entirely with this program!)
